--- a/nba-site/styles/globals.css
+++ b/nba-site/styles/globals.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;600&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background-color: #f2f0f0;
+}
